--- a/signup.css
+++ b/signup.css
@@ -44,7 +44,7 @@ h2 {
     margin-left: 30%;
     width: 40%;
     margin-bottom: 30px;
-    border-bottom: 1px solid rgb(10, 184, 117);
+    border-bottom: 1px solid  rgb(10, 184, 117);
 }
 
 .submitbtn {
@@ -54,7 +54,7 @@ h2 {
     border: none;
     cursor: pointer;
     transition: all 0.5s ease;
-    color: black;
+    color: rgb(255, 255, 255);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
@@ -97,7 +97,7 @@ h2 {
 .passinfo {
     visibility: hidden;
     width: 120px;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: #fff;
     color: #fff;
     text-align: center;
     border-radius: 6px;
