--- a/signup.css
+++ b/signup.css
@@ -15,7 +15,7 @@
     border-radius: 20px;
     width: 30%;
     margin-left: 35%;
-    color: azure;
+    color: rgb(248, 248, 248);
 }
 
 .txtinput {
@@ -26,7 +26,12 @@
     width: 80%;
     margin-top: 20px;
     margin-bottom: 10px;
+  
 }
+
+input,  textarea {
+    color: white;
+    }
 
 .txtinput:focus {
     background: none !important;
@@ -54,7 +59,7 @@ h2 {
     border: none;
     cursor: pointer;
     transition: all 0.5s ease;
-    color: rgb(255, 255, 255);
+    color: black;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
@@ -97,7 +102,7 @@ h2 {
 .passinfo {
     visibility: hidden;
     width: 120px;
-    background-color: #fff;
+    background-color: rgb(170, 170, 170);
     color: #fff;
     text-align: center;
     border-radius: 6px;
